Added pretest activity results

--- a/qa_startup/s_evaluation.tex
+++ b/qa_startup/s_evaluation.tex
@@ -111,6 +111,8 @@ Companies not using matrix organization should also preserve communities of expe
 
 \subsection{Activities}
 
+\textbf{Pretest.} Activities used in pretest defect removal were studied and presented by Capers Jones in The Economics of Software Quality. The study was aimed at small software projects and the results divided the defects found by the origin of defect and the activity it was found with. Defect origins distinguished were requirements, design, code and documentation. Used activities were desk check, scrum, client reviews, peer reviews and static analysis. The results show that over half of the defects were found from the code. The most effective activity for finding the defects prior to testing was static analysis. Considering the almost automatic nature of static analysis, it can be seen as a predictable result. The results presented in Figure~\ref{fig:pretest-efficiency} can aid in choosing the pretest defect removal activities.\cite{jones2011economics}
+
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=1.0\textwidth]{image/pretest-efficiency.png}
@@ -119,7 +121,11 @@ Companies not using matrix organization should also preserve communities of expe
 \label{fig:pretest-efficiency}
 \end{figure}
 
-Figure~\ref{fig:pretest-efficiency}
+\textbf{Defect prevention.}
+
+
+\textbf{Testing.}
+
 
 % PREVENTIVE
 % -Small business applications p.126
